# pfn-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/commands/: tool-update.md
deploy/: .env.production  pfn-mcp.service  setup.sh  update.sh
docs/: WEB_UI_PLAN.md  concept.md  custom-ui.md  electricity_cost_tools.md  energy_consumption_update.md  engineering-terms.md  grafana_ini_oauth.txt  group-telemetry-update.md  openwebui-system-prompt.md  phase2-extension.md  phase2-telemetry.md  quantities-mapping.md  remote-mcp-fix.md  session_expiry_issue.md  tagging-system.md  tags-aggregations.md  tenant-code-injection.md  testing-phase-1-2.md  thin-wrapper.md  tool-modification-tenant-injection.md  tool-search-guide.md  tools-reference.md  tools-review.md  user-registration-flow.md
docs/customui/: implementation-plan.md
docs/playground/: energy_consumption.md  interact_2601090804.txt  listing-devices.md  new-model.md  prompting-strategy.md  sys-prompt-ver-1-full.md  sys-prompt-ver-2-condensed.md  sys-prompt-ver-3-structured.md  sys-prompt-ver-4-toolsearch.md  time_format.md  time_format_update.md  tool-test-01.md
frontend/: .env.example  package-lock.json  package.json
migrations/: 001_mcp_chat_schema.sql  001_meter_aggregations.sql  002_seu_device_tags.sql
prototype/: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  litellm-config.yaml  openwebui_grafana_action.py  openwebui_usage_tool.py  pfn_tool_wrapper.py  setup_grafana_keycloak.py  sync_keycloak_groups.py  sync_keycloak_to_valkyrie.py  tenant_aware_tool.py  user_context_inspector.py
scripts/: generate_tools_reference.py
tests/: __init__.py  _deprecated_test_phase2_electricity_cost.py  _deprecated_test_phase2_group_telemetry.py  _deprecated_test_phase2_peak_analysis.py  conftest.py  test_combined_scenarios.py  test_datetime_handling.py  test_edge_cases.py  test_formula_parser.py  test_phase1_discovery.py  test_phase2_electricity_cost.py  test_phase2_energy_consumption.py  test_phase2_group_telemetry.py  test_phase2_peak_analysis.py  test_phase2_telemetry.py  test_resolve_tenant.py  test_wages_data.py
(+66 files in other folders)
