[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfn-mcp"
version = "0.1.0"
description = "MCP server for Valkyrie energy monitoring database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "PFN Team" }
]
dependencies = [
    "mcp>=1.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
pfn-mcp = "pfn_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pfn_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
